--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </nav>
   </header>
   <section class="parallax">
-    <img src="/imgs/img1.JPG" class="bg" alt="bg">
+    <img src="imgs/img1.JPG" class="bg" alt="bg">
   </section>
 
   <section class="content">
