--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </nav>
   </header>
   <section class="parallax">
-    <img src="imgs/img1.JPG" class="bg" alt="bg">
+    <img src="/images/img1.jpg" class="bg" alt="bg">
   </section>
 
   <section class="content">
@@ -23,27 +23,27 @@
 
     <div class="collection">
       <div class="box"></div>
-      <img class="mountain" src="/imgs/img2.JPG" alt="mountains">
+      <img class="mountain" src="/images/img2.jpg" alt="mountains">
     </div>
     <div class="collection">
       <div class="box"></div>
-      <img class="mountainTwo" src="/imgs/img3.JPG" alt="mountains">
+      <img class="mountainTwo" src="/images/img3.jpg" alt="mountains">
     </div>
     <div class="collection">
       <div class="box"></div>
-      <img class="mountainThree" src="/imgs/img4.JPG" alt="mountains">
+      <img class="mountainThree" src="/images/img4.jpg" alt="mountains">
     </div>
     <div class="collection">
       <div class="box"></div>
-      <img class="mountainFour" src="/imgs/img5.JPG" alt="mountains">
+      <img class="mountainFour" src="/images/img5.jpg" alt="mountains">
     </div>
     <div class="collection">
       <div class="box"></div>
-      <img class="mountainFive" src="/imgs/img6.JPG" alt="mountains">
+      <img class="mountainFive" src="/images/img6.jpg" alt="mountains">
     </div>
     <div class="collection">
       <div class="box"></div>
-      <img class="mountainSix" src="/imgs/img2.JPG" alt="mountains">
+      <img class="mountainSix" src="/images/img2.jpg" alt="mountains">
     </div>
     <h1>Explore with us.</h1>
     <p>Venture into new challenges and breathtaking views. <span>Our team has been all over the globe, visiting all of the exciting and refreshing mountains.</span></p>
@@ -52,7 +52,7 @@
   <section class="about">
     <h1 class="split">Trust Experience.</h1>
     <p>We've been in the industry for the past 15 years. <span>During our hundreds of expeditions, there hasn't been a single accident, but just in case, we always have the proper people on the team to help in emergencies.</span></p>
-    <img class="about-img" src="/imgs/img8.JPG" alt="mountains">
+    <img class="about-img" src="/images/img8.jpg" alt="mountains">
   </section>
     
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
