fixed path for bg

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </nav>
   </header>
   <section class="parallax">
-    <img src="/images/img0.jpg" class="bg" alt="bg">
+    <img src="./images/img0.jpg" class="bg" alt="bg">
   </section>
 
   <section class="content">
